--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "npm run env:prod -- webpack"
   },
   "dependencies": {
-    "antd": "^3.0.0-rc.3",
+    "antd": "^3.0.0",
     "babel-polyfill": "^6.20.0",
     "classnames": "^2.2.5",
     "draft-js": "^0.10.4",
@@ -35,6 +35,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-hot-loader": "^3.1.1",
+    "react-onclickoutside": "^6.7.0",
     "react-redux": "^5.0.1",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
